--- a/gltransition-video.html
+++ b/gltransition-video.html
@@ -19,19 +19,27 @@
     <script src="/lib/pixi.js"></script>
     <script src="/lib/gsap.js"></script>
     <script src="/lib/gl-transition.js"></script>
-    <script>window.onload = function () {
+    <button onclick="onPlayVideo()">开始</button>
+    <script>
+    function onPlayVideo() {
         const GLTransitions = window.GLTransitions
         const app = new PIXI.Application();
         document.body.appendChild(app.view);
 
         // Create background image
-        const background = PIXI.Sprite.from('examples/assets/road.jpg');
-        background.width = app.screen.width;
-        background.height = app.screen.height;
-        app.stage.addChild(background);
+        // create a video texture from a path
+        const texture = PIXI.Texture.from('examples/assets/landscape.mp4');
+        const videoSprite = new PIXI.Sprite(texture);
+        videoSprite.width = app.screen.width;
+        videoSprite.height = app.screen.height;
+        app.stage.addChild(videoSprite);
         app.stop();
 
-        PIXI.Assets.load('examples/assets/barley.jpg').then(onAssetsLoaded);
+
+        const texture2 = PIXI.Texture.from('examples/assets/bunny.mp4');
+        const video2Sprite = new PIXI.Sprite(texture2);
+        video2Sprite.width = app.screen.width;
+        video2Sprite.height = app.screen.height;
 
         const vertextShader = `
         attribute vec2 aVertexPosition;
@@ -90,32 +98,34 @@
                 gl_FragColor = fg;
             }`
 
-            function onAssetsLoaded(to) {
-                let filter = new PIXI.Filter(vertextShader, fragmentShader, {
-                    customUniform: 0,
-                    ratio: background.width / background.height,
-                    progress: 0,
-                    to: to,
-                    _fromR:  background.width / background.height,
-                    _toR:  background.width / background.height,
-                });
-                background.filters = [filter];
-                app.ticker.add((delta) => {
-                    filter.uniforms.customUniform += 0.005 * delta;
-                    // filter.uniforms.progress = Math.abs(Math.sin(filter.uniforms.customUniform))
-                    filter.uniforms.progress = filter.uniforms.customUniform % 1000
-                    filter.uniforms.progress = filter.uniforms.progress - Math.trunc(filter.uniforms.progress)
+            
+            let filter = new PIXI.Filter(vertextShader, fragmentShader, {
+                customUniform: 0,
+                ratio: videoSprite.width / videoSprite.height,
+                progress: 0,
+                to: video2Sprite.texture,
+                _fromR:  videoSprite.width / videoSprite.height,
+                _toR:  videoSprite.width / videoSprite.height,
+            });
+            videoSprite.filters = [filter];
+            app.ticker.add((delta) => {
+                // video2Sprite.texture.update()
+                // filter.uniforms.to = video2Sprite.texture
+                filter.uniforms.customUniform += 0.005 * delta;
+                // filter.uniforms.progress = Math.abs(Math.sin(filter.uniforms.customUniform))
+                filter.uniforms.progress = filter.uniforms.customUniform % 1000
+                filter.uniforms.progress = filter.uniforms.progress - Math.trunc(filter.uniforms.progress)
 
-                    // filter.uniforms.ratio = width / height;
-                    // filter.uniforms.progress = progress;
-                    // filter.uniforms.from = from.bind(0);  // texture2d
-                    // filter.uniforms.to = to.bind(1);      // texture2d
-                    // filter.uniforms._fromR = from.shape[0] / from.shape[1];
-                    // filter.uniforms._toR = to.shape[0] / to.shape[1];
-                });
-                app.start();
-            }
-    }</script>
+                // filter.uniforms.ratio = width / height;
+                // filter.uniforms.progress = progress;
+                // filter.uniforms.from = from.bind(0);  // texture2d
+                // filter.uniforms.to = to.bind(1);      // texture2d
+                // filter.uniforms._fromR = from.shape[0] / from.shape[1];
+                // filter.uniforms._toR = to.shape[0] / to.shape[1];
+            });
+            app.start();
+        }
+    </script>
 </body>
 
 </html>
